log/build_2021-06-22_17-03-57/pubsub/stdout_stderr.log
running egg_info
writing ../../build/pubsub/pubsub.egg-info/PKG-INFO
writing dependency_links to ../../build/pubsub/pubsub.egg-info/dependency_links.txt
writing entry points to ../../build/pubsub/pubsub.egg-info/entry_points.txt
writing requirements to ../../build/pubsub/pubsub.egg-info/requires.txt
writing top-level names to ../../build/pubsub/pubsub.egg-info/top_level.txt
reading manifest file '../../build/pubsub/pubsub.egg-info/SOURCES.txt'
writing manifest file '../../build/pubsub/pubsub.egg-info/SOURCES.txt'
running build
running build_py
copying pubsub/publisher.py -> /home/markros2/rosproject/build/pubsub/build/lib/pubsub
running install
running install_lib
copying /home/markros2/rosproject/build/pubsub/build/lib/pubsub/publisher.py -> /home/markros2/rosproject/install/pubsub/lib/python3.8/site-packages/pubsub
byte-compiling /home/markros2/rosproject/install/pubsub/lib/python3.8/site-packages/pubsub/publisher.py to publisher.cpython-38.pyc
  File "/home/markros2/rosproject/install/pubsub/lib/python3.8/site-packages/pubsub/publisher.py", line 6
    global flag = 1
                ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/markros2/rosproject/install/pubsub/lib/python3.8/site-packages/pubsub-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/pubsub/pubsub.egg-info to /home/markros2/rosproject/install/pubsub/lib/python3.8/site-packages/pubsub-0.0.0-py3.8.egg-info
running install_scripts
Installing publisher script to /home/markros2/rosproject/install/pubsub/lib/pubsub
Installing subscriber script to /home/markros2/rosproject/install/pubsub/lib/pubsub
writing list of installed files to '/home/markros2/rosproject/build/pubsub/install.log'
